feature of lowpower
Match-id-b944dec4c985ce974f86f07c5f590d3ab8b1afd4

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -722,7 +722,9 @@ sys_time = INTEGER,null
 
 [LowPowerMap]
 sys_time = INTEGER,null
-sampling_times = INTEGER,null
+vf_samp_cnt = INTEGER,null
+pwr_samp_cnt = INTEGER,null
+temp_samp_cnt = INTEGER,null
 tem_of_ai_core = INTEGER,null
 tem_of_hbm = INTEGER,null
 tem_of_hbm_granularity = INTEGER,null
