collect host-sys-usage
Match-id-f7f87855c6c8db96a00ed5203fabfc144f3a2897

--- a/test/msprof_cpp/ut/app/CMakeLists.txt
+++ b/test/msprof_cpp/ut/app/CMakeLists.txt
@@ -52,6 +52,7 @@ target_include_directories(application_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/profapi
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc
+    ${MSPROF_SOURCE_DIR}/dvvp/params_adapter
     ${MSPROF_SOURCE_DIR}/../inc
     ../stub/
     ../stub/common
