--- a/test/msprof_cpp/ut/transport/CMakeLists.txt
+++ b/test/msprof_cpp/ut/transport/CMakeLists.txt
@@ -64,6 +64,7 @@ target_include_directories(transport_utest PRIVATE
     ${TOP_DIR}/collector/inc/external/acl
     ${TOP_DIR}/collector/inc/external/ge
     ${TOP_DIR}/collector/dvvp/depend/inc/acl
+    ${TOP_DIR}/collector/dvvp/params_adapter
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
@@ -78,6 +79,7 @@ target_include_directories(transport_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/adx/inc    
     ${MSPROF_SOURCE_DIR}/dvvp/common/logger
     ${MSPROF_SOURCE_DIR}/dvvp/common 
+    ${MSPROF_SOURCE_DIR}/dvvp/common/platform
     ${MSPROF_SOURCE_DIR}/dvvp/common/statistics 
     ${MSPROF_SOURCE_DIR}/dvvp/common/utils 
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
