parallel data parse
Match-id-e0bbcc456add34679132f05f55d195b8cd398db0

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -565,6 +565,9 @@ stream_id=INTEGER,null
 task_id=INTEGER,null
 batch_id=INTEGER,null
 iter_id=INTEGER,null
+start_time=TEXT,null
+end_time=TEXT,null
+is_ai_core=INTEGER,null
 
 [GeMergeMap]
 model_id=INTEGER,null
@@ -871,3 +874,66 @@ index_id=INTEGER,null
 iteration_end=INTEGER,null
 all_reduce_start=INTEGER,null
 all_reduce_end=INTEGER,null
+
+[HcclOperatorExeMap]
+model_id=INTEGER,null
+index_id=INTEGER,null
+op_name=TEXT,null
+op_type=TEXT,null
+start_time=REAL,null
+end_time=REAL,null
+
+[ParallelStrategyMap]
+ai_frame_type=TEXT,null
+stage_num=INTEGER,null
+rankId=INTEGER,null
+stageId=INTEGER,null
+parallelType=TEXT,null
+stageDevices=TEXT,null
+parallel_mode=TEXT,null
+
+[HcclOperatorOverlapMap]
+model_id=INTEGER,null
+index_id=INTEGER,null
+op_name=TEXT,null
+op_type=TEXT,null
+start_time=REAL,null
+end_time=REAL,null
+overlap_time=REAL,null
+
+[ComputationTimeMap]
+model_id=INTEGER,null
+index_id=INTEGER,null
+step_time=REAL,null
+computation_time=REAL,null
+
+[ClusterDataParallel]
+rank_id=INTEGER,null
+device_id=INTEGER,null
+model_id=INTEGER,null
+index_id=INTEGER,null
+computation_time=REAL,null
+pure_communication_time=REAL,null
+communication_time=REAL,null
+interval_of_communication_time=REAL,null
+hccl_op_num=INTEGER,null
+
+[ClusterModelParallel]
+rank_id=INTEGER,null
+device_id=INTEGER,null
+model_id=INTEGER,null
+index_id=INTEGER,null
+computation_time=REAL,null
+pure_communication_time=REAL,null
+communication_time=REAL,null
+
+[ClusterPipelineParallel]
+rank_id=INTEGER,null
+device_id=INTEGER,null
+model_id=INTEGER,null
+index_id=INTEGER,null
+computation_time=REAL,null
+pure_communication_time=REAL,null
+communication_time=REAL,null
+pure_communication_time_only_revice=REAL,null
+pure_communication_time_except_revice=REAL,null
