--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -118,10 +118,7 @@ chip_model = 0,1,2,3,4
 path = msparser.aic_sample.ai_core_sample_parser
 chip_model = 2,3,4
 
-[HCCLParser]
-path = msparser.hccl.hccl_parser
-chip_model = 0,1,2,3,4
-level = 3
+
 
 [MsprofTxParser]
 path = msparser.msproftx.msproftx_parser
@@ -169,3 +166,17 @@ chip_model = 0,1,2,3,4,5
 [DataQueueParser]
 path = msparser.aicpu.data_queue_parser
 chip_model = 0,1,2,3,4,5
+
+[HCCLOperatiorParser]
+path = msparser.parallel.hccl_operator_parser
+chip_model = 1,2,3,4,5
+level = 3
+
+[ParallelStrategyParser]
+path = msparser.parallel.parallel_strategy_parser
+chip_model = 1,2,3,4,5
+
+[ClusterParallelParser]
+path = msparser.parallel.cluster_parallel_parser
+chip_model = 1,2,3,4,5
+level = 4
