AR: AR20221012743039 Description: 主机队列拆分上库：1，主机队列采集数据解析与入库。2，ut用例 Team:MSPROF_TOOLS Feature or Bugfix:Feature
Match-id-48b349d848de22282bd135410ef28ebe6e09c3c9

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -877,3 +877,10 @@ index_id=INTEGER,null
 iteration_end=INTEGER,null
 all_reduce_start=INTEGER,null
 all_reduce_end=INTEGER,null
+
+[HostQueueMap]
+type=INTEGER,null
+extra_info=INTEGER,null
+index_id=INTEGER,null
+value=INTEGER,null
+mode=INTEGER,null
