--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -166,6 +166,6 @@ chip_model = 5
 path = msparser.ms_timer.ms_time_parser
 chip_model = 0,1,2,3,4,5
 
-[DataQueueParser]
-path = msparser.aicpu.data_queue_parser
+[DataPreparationParser]
+path = msparser.aicpu.data_preparation_parser
 chip_model = 0,1,2,3,4,5
