conflict adapt and add parallel parser
Match-id-f7f470ebff671248d2e684e4cd80f327a32a5838

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -913,31 +913,34 @@ index_id=INTEGER,null
 step_time=REAL,null
 computation_time=REAL,null
 
-[ClusterDataParallel]
+[ClusterDataParallelMap]
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
 index_id=INTEGER,null
+step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
 communication_time=REAL,null
 interval_of_communication_time=REAL,null
 hccl_op_num=INTEGER,null
 
-[ClusterModelParallel]
+[ClusterModelParallelMap]
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
 index_id=INTEGER,null
+step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
 communication_time=REAL,null
 
-[ClusterPipelineParallel]
+[ClusterPipelineParallelMap]
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
 index_id=INTEGER,null
+step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
 communication_time=REAL,null
