--- a/analysis/config/stars_config.ini
+++ b/analysis/config/stars_config.ini
@@ -2,28 +2,34 @@
 fmt = 000000, 000001
 db = acsq.db
 table = AcsqTask
+level = 0
 
 [FftsLogParser]
 fmt = 100010, 100011
 db = soc_log.db
 table = FftsLog
+level = 0
 
 [AccPmuParser]
 fmt = 011010
 db = acc_pmu.db
 table = AccPmuOrigin
+level = 1
 
 [InterSocParser]
 fmt = 011100
 db = soc_profiler.db
 table = InterSoc
+level = 1
 
 [StarsChipTransParser]
 fmt = 011011
 db = chip_trans.db
 table = PaLinkInfo,PcieInfo
+level = 1
 
 [LowPowerParser]
 fmt = 011101
 db = lowpower.db
 table = LowPower
+level = 1
