--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -917,7 +917,7 @@ computation_time=REAL,null
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
-index_id=INTEGER,null
+iteration_id=INTEGER,null
 step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
@@ -929,7 +929,7 @@ hccl_op_num=INTEGER,null
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
-index_id=INTEGER,null
+iteration_id=INTEGER,null
 step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
@@ -939,13 +939,22 @@ communication_time=REAL,null
 rank_id=INTEGER,null
 device_id=INTEGER,null
 model_id=INTEGER,null
-index_id=INTEGER,null
+iteration_id=INTEGER,null
 step_time=REAL,null
 computation_time=REAL,null
 pure_communication_time=REAL,null
 communication_time=REAL,null
 pure_communication_time_only_revice=REAL,null
 pure_communication_time_except_revice=REAL,null
+
+[ClusterParallelStrategyMap]
+ai_frame_type=TEXT,null
+stage_num=INTEGER,null
+rankId=INTEGER,null
+stageId=INTEGER,null
+parallelType=TEXT,null
+stageDevices=TEXT,null
+parallel_mode=TEXT,null
 
 [HostQueueMap]
 type=INTEGER,null
