--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,10 @@ find_package(protoc)
 find_package(ascend_protobuf_shared)
 find_package(ascend_protobuf_static)
 
+if (DEFINED HITEST AND HITEST STREQUAL "on")
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE hitestwrapper)
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK hitestwrapper)
+endif()
+
 ########################## securec ###################################
 add_subdirectory(collector)
