--- a/test/msprof_cpp/ut/job_wrapper/CMakeLists.txt
+++ b/test/msprof_cpp/ut/job_wrapper/CMakeLists.txt
@@ -55,6 +55,8 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/msproftx/src/msprof_tx_manager.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/msproftx/src/msprof_tx_reporter.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/msproftx/src/msprof_stamp_pool.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/dynamic_profiling/src/dyn_prof_client.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/dynamic_profiling/src/dyn_prof_server.cpp 
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/src/command_handle.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/src/msprof_callback_impl.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/task_handle/src/device.cpp
@@ -156,6 +158,7 @@ target_include_directories(job_wrapper_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/drvprof/include
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/platform/include
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/msproftx/include
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/dynamic_profiling/include
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/include
     ${MSPROF_SOURCE_DIR}/dvvp/common
     ${MSPROF_SOURCE_DIR}/dvvp/common/errno
