1911 平台适配代码
Match-id-e75d3b25d7bd125d6696d79c30be8b67c57559c8

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -99,6 +99,7 @@ set(msprofilerCpp
     common/platform/platform.cpp
     common/platform/platform_adapter_interface.cpp
     common/platform/platform_adapter_mini.cpp
+    common/platform/platform_adapter_miniv2.cpp
     common/platform/platform_adapter_mdc.cpp
     common/platform/platform_adapter_lhisi.cpp
     common/platform/platform_adapter_dc.cpp
