--- a/collector/dvvp/msprofbin/CMakeLists.txt
+++ b/collector/dvvp/msprofbin/CMakeLists.txt
@@ -82,6 +82,7 @@ add_executable(msprofbin
     ../common/platform/platform.cpp
     ../common/platform/platform_adapter_interface.cpp
     ../common/platform/platform_adapter_mini.cpp
+    ../common/platform/platform_adapter_miniv2.cpp
     ../common/platform/platform_adapter_mdc.cpp
     ../common/platform/platform_adapter_lhisi.cpp
     ../common/platform/platform_adapter_dc.cpp
