--- a/test/msprof_cpp/ut/common/CMakeLists.txt
+++ b/test/msprof_cpp/ut/common/CMakeLists.txt
@@ -14,6 +14,7 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_interface.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mini.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_miniv2.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mdc.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_lhisi.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_dc.cpp
