--- a/test/msprof_cpp/ut/msprofbin/CMakeLists.txt
+++ b/test/msprof_cpp/ut/msprofbin/CMakeLists.txt
@@ -23,6 +23,7 @@ set(common_file
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_interface.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mini.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_miniv2.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mdc.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_lhisi.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_dc.cpp
@@ -73,6 +74,7 @@ set(common_file
 	${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_lhisi.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mdc.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_mini.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/common/platform/platform_adapter_miniv2.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/msprof/dynamic_profiling/src/dyn_prof_client.cpp    
 )
 
