修复910B场景aic-metrics=PipeUtilization时校验报错问题；同步海思修改910Baicmetrics=pipeUtilization时EVENT ID
Match-id-3ca8593ca151259f49c8a640b7d1984f7647b6d3

--- a/test/msprof_cpp/ut/job_wrapper/CMakeLists.txt
+++ b/test/msprof_cpp/ut/job_wrapper/CMakeLists.txt
@@ -182,6 +182,7 @@ target_include_directories(job_wrapper_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/common/config
     ${MSPROF_SOURCE_DIR}/dvvp/message
     ${MSPROF_SOURCE_DIR}/dvvp/transport
+    ${MSPROF_SOURCE_DIR}/dvvp/transport/hdc
     ${MSPROF_SOURCE_DIR}/dvvp/common/memory/
     ${MSPROF_SOURCE_DIR}/dvvp/streamio/client/include
     ${MSPROF_SOURCE_DIR}/dvvp/streamio/common/include
