--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -246,6 +246,10 @@ target_compile_options(msprofiler_share PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -D_FORTIFY_SOURCE=2
+    $<$<NOT:$<STREQUAL:${CMAKE_BUILD_TYPE},Debug>>:-O2>
+    -fstack-check
+    -ftrapv
 )
 
 target_link_options(msprofiler_share PRIVATE
