订阅模式代码1
Match-id-39c9f792b1cb3dcc3888b0a5fa2eee7f009326f0

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -92,6 +92,7 @@ set(msprofilerCpp
     analyze/src/analyzer_hwts.cpp
     analyze/src/analyzer_ffts.cpp
     analyze/src/analyzer_ts.cpp
+    analyze/src/analyzer_rt.cpp
     analyze/src/op_desc_parser.cpp
     common/config/config_manager.cpp
     common/memory/chunk_pool.cpp
