--- a/test/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/test/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -15,6 +15,7 @@ set(profilerSrcList
     ${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ffts.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_hwts.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ts.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_rt.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/op_desc_parser.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/common/config/config_manager.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/logger/cmd_log.cpp
@@ -105,6 +106,7 @@ set(profilerSrcFile
     test/msprof_callback_handler_utest.cpp
     test/prof_acl_core_utest.cpp
     test/aicpu_plugin_utest.cpp
+    test/analyzer_utest.cpp
     ../stub/ge_stub.cpp
     ../stub/hdc-log-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
