--- a/test/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/test/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -47,6 +47,7 @@ set(profilerSrcList
 	${MSPROF_SOURCE_DIR}/dvvp/job_wrapper/src/prof_host_job.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/message/codec.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/common/src/msprof_callback_handler.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/msprof/common/src/msprof_reporter_mgr.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/common/src/receive_data.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/src/aicpu_plugin.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/src/prof_acl_mgr.cpp
