订阅模块参数适配迁移
Match-id-385196549e729768d17db4ccf9e155b71c6ea2f9

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -83,6 +83,7 @@ install(TARGETS stub_msprofiler OPTIONAL
 ######################## libmsprofiler.so ###########################
 set(msprofilerCpp
     ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter_aclapi.cpp
+    ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter_aclsubscribe.cpp
     ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter_geopt.cpp
     ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter_acljson.cpp
     ${TOP_DIR}/collector/dvvp/params_adapter/params_adapter.cpp
