--- a/test/msprof_cpp/ut/transport/CMakeLists.txt
+++ b/test/msprof_cpp/ut/transport/CMakeLists.txt
@@ -1,8 +1,8 @@
 protobuf_generate(profiler
 	CppPath
 	HeaderPath
-	${MSPROF_SOURCE_DIR}/dvvp/proto/profiler.proto
-	${MSPROF_SOURCE_DIR}/dvvp/proto/profiler_ext.proto
+	${MSPROF_SOURCE_DIR}/dvvp/proto/msprofiler.proto
+	${MSPROF_SOURCE_DIR}/dvvp/proto/msprofiler_ext.proto
 )
 set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/transport/transport.cpp 
