--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -3,8 +3,8 @@ add_subdirectory(msprofbin)
 protobuf_generate(profiler_proto
     CppPath
     HeaderPath
-    ${CMAKE_CURRENT_SOURCE_DIR}/proto/profiler.proto
-    ${CMAKE_CURRENT_SOURCE_DIR}/proto/profiler_ext.proto
+    ${CMAKE_CURRENT_SOURCE_DIR}/proto/msprofiler.proto
+    ${CMAKE_CURRENT_SOURCE_DIR}/proto/msprofiler_ext.proto
     TARGET
 )
 
